--- a/projbackend/package.json
+++ b/projbackend/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.26.0",
+    "babel-cli": "^6.18.0",
     "body-parser": "^1.19.0",
     "braintree": "^3.2.1",
     "cookie-parser": "^1.4.4",
