--- a/projbackend/package.json
+++ b/projbackend/package.json
@@ -20,12 +20,17 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "express-validator": "^6.10.0",
+    "firebase": "^8.6.3",
     "formidable": "^1.2.1",
+    "gridfs-stream": "^1.1.1",
     "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "method-override": "^3.0.0",
     "mongoose": "^5.11.18",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "nodemon": "^1.19.4",
     "npm": "^6.14.11",
     "uuid": "^3.3.3",
